@@ -1,3 +1,8 @@
+2006-02-19  Mark Wielaard  <mark@klomp.org>
+
+	* gnu/testlet/java/awt/Menu/addItem.java: New test.
+	* gnu/testlet/java/awt/MenuBar/addMenu.java: New test.
+
 2006-02-19  Raif S. Naffah  <raif@swiftdsl.com.au>
 
 	* gnu/testlet/gnu/java/security/sig/TestOfSignatureCodecFactory.java:
